--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: 'Barlow Condensed', sans-serif;
     width: 800px;
@@ -7,6 +8,13 @@ body {
     background-color: #292831;
     color: white;
 }
+a:link {
+    color: white;
+}
+a:visited {
+    color: white;
+}
+
 h1 {
     font-size: 50px;
 }
@@ -23,23 +31,4 @@ h3 {
     align-items: center;
     justify-content: center;
     height: 100vh;
-}
-
-
-#studio-info{
-    font-size: 39px;
-    margin-bottom: 50px;
-    padding-bottom: 50px;
-    border-bottom: 1px solid black;
-}
-
-#game-names-title {
-    font-size: 31px;
-    text-decoration: underline;
-}
-
-#game-info {
-    border-bottom: 1px solid black;
-    padding-bottom: 50px;
-    margin-bottom: 150px;
 }
