--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ hr {
     margin-bottom: 40px;
 }
 
-.presskit .quote {
+.quote {
     padding-left: 24px;
     border-left: 1px #4A7A96 dotted;
     font-size: 24px;
@@ -58,8 +58,8 @@ hr {
 
 #gronland-logo img {
     width: 650px;
-    margin-top: 93px;
-    margin-bottom: 39px;
+    margin-top: 86px;
+    margin-bottom: 31px;
 }
 
 .photobox {
@@ -74,7 +74,11 @@ hr {
 }
 
 #steam-logo {
-    height: 39px;
+    height: 50px;
+}
+
+#steam-logo a img {
+    padding-top: 20px;
 }
 
 #mail-icon {
