--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ hr {
 .game {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     min-height: 100vh;
 }
 
