--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 body {
     font-family: 'Barlow Condensed', sans-serif;
     width: 800px;
-    font-size: 39px;
+    font-size: 50px;
     margin: auto;
     background-color: #292831;
     color: white;
@@ -15,7 +15,7 @@ a:visited {
 }
 
 h1 {
-    font-size: 50px;
+    font-size: 63px;
     margin: 0;
 }
 
@@ -37,29 +37,49 @@ hr {
     height: 100vh;
 }
 
-.game {
+.frontpage {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    gap: 157px;
+}
+
+.about {
+    flex-direction: column;
+    align-items: center;
     justify-content: space-evenly;
-    min-height: 100vh;
+}
+
+.social {
+    font-size: 39px;
+}
+
+.game {
+    flex-direction: column;
+    justify-content: top;
+    height: 100vh;
 }
 
 .presskit {
     display: block;
-    font-size: 31px;
-    margin-bottom: 40px;
+    font-size: 39px;
+    margin-bottom: 39px;
 }
 
 .quote {
-    padding-left: 24px;
+    padding-left: 31px;
     border-left: 1px #4A7A96 dotted;
-    font-size: 24px;
+    font-size: 31px;
+}
+
+.red {
+    color: rgb(255, 107, 107);
 }
 
 #gronland-logo img {
     width: 650px;
-    margin-top: 86px;
-    margin-bottom: 31px;
+    margin-top: 39px;
+    margin-bottom: 39px;
 }
 
 .photobox {
@@ -71,21 +91,6 @@ hr {
 
 .photobox .sixforty {
     width: 640px;
-}
-
-#steam-logo {
-    height: 50px;
-}
-
-#steam-logo a img {
-    padding-top: 20px;
-}
-
-#mail-icon {
-    text-align: center;
-}
-#mail-icon img {
-    width: 50px;
 }
 
 table {
